--- a/Module 4/src/templates/home.template.html
+++ b/Module 4/src/templates/home.template.html
@@ -6,7 +6,7 @@
 	Click the dragon to see our Menu Categories!! <br>
 
 
-	<a ui-sref="CategoryList"> <img src="images/chinese-dragon.png"> </a>
+	<a ui-sref="CategoryList"> <img src="ervinjn.github.io//Coursera-AngularJS/Module%204/images/chinese-dragon.png"> </a>
 
 
 </div>
