--- a/Module 4/src/templates/categorieslist.template.html
+++ b/Module 4/src/templates/categorieslist.template.html
@@ -1,4 +1,4 @@
-<a ui-sref="home">Home</a> &lt; 
+<a ui-sref="home"> Home </a>
 
 <h3>List of Menu Categories</h3>
 <category-list array="CLctrl.array"></category-list>
