--- a/Module 4/src/templates/categorieslist.template.html
+++ b/Module 4/src/templates/categorieslist.template.html
@@ -1,5 +1,5 @@
 <a ui-sref="home"> Home </a>
 
 <h3>List of Menu Categories</h3>
-{{ CL.ctrl.items[0].name }}
+{{ CLctrl.items[0].name }}
 <category-list items="CLctrl.items"></category-list>
