--- a/Module 4/src/templates/categorieslist.template.html
+++ b/Module 4/src/templates/categorieslist.template.html
@@ -2,4 +2,4 @@
 
 <h3>List of Menu Categories</h3>
 {{ CLctrl.items[0].name }}
-<category-list items="CLctrl.items"></category-list>
+<category-list catarray="CLctrl.items"></category-list>
