--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,6 +1,6 @@
 Just seeing if the component template is being loaded at all
 <ul>
   <li ng-repeat="item in CLctrl.items">
-    <a ui-sref="Items({items: item[$index].short_name})" class="link"> {{ item.name }} </a>    
+    <a ui-sref="Items({items: item.short_name})" class="link"> {{ item.name }} </a>    
   </li>
 </ul>
