--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -2,6 +2,6 @@ Just seeing if the component template is being loaded at all
 <ul>
   <li> is the ul tag working?  </li>
   <li ng-repeat="item in CLctrl.items">
-    <a ui-sref="Items({items: item.short_name})" class="link"> $index {{ CLctrl.items[$index].name }} </a>    
+    <a ui-sref="Items({items: item.short_name})" class="link"> $index {{ CLctrl.items[$index] }} </a>    
   </li>
 </ul>
