--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,8 +1,8 @@
 Just seeing if the component template is being loaded at all
 <ul>
   <li> is the ul tag working?  </li>
-  <li ng-repeat="part in $CLctrl.items">
-    {{ part }}
-    <a ui-sref="Items({items: item.short_name})" class="link">  {{ part }} </a>    
+  <li ng-repeat="part in $CLctrl.items"
+      ui-sref="Items({listdata: part.short_name})">
+      {{ part.name }} 
   </li>
 </ul>
