--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,7 +1,7 @@
 Just seeing if the component template is being loaded at all
 <ul>
-  <li> CLctrl.items[0].short_name  </li>
-  <li ng-repeat="part in CLctrl.items"
+  <li> catarray[0].short_name  </li>
+  <li ng-repeat="part in catarray"
       ui-sref="Items({listdata: part.short_name})">
       {{ part.name }} 
   </li>
