--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,6 +1,6 @@
-Just seeing if the component template is being loaded at all
+Just seeing if the component template is being loaded at all.
 <ul>
-  <li> catarray[0].short_name  </li>
+  <li> {{catarray[0].short_name}}  </li>
   <li ng-repeat="part in catarray"
       ui-sref="Items({listdata: part.short_name})">
       {{ part.name }} 
