--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,6 +1,6 @@
 Just seeing if the component template is being loaded at all.
 <ul>
-  <li>  $ctrl </li>
+  <li>  {{$ctrl}} </li>
   <li ng-repeat="part in $ctrl.items"
       ui-sref="Items({listdata: part.short_name})">
       {{ part.name }} 
