--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,6 +1,6 @@
 <ul>
   <li>  {{$ctrl}} </li>
-  <li ng-repeat="part in $ctrl.items"
+  <li ng-repeat="part in $ctrl.catarray"
       ui-sref="Items({listdata: part.short_name})">
       {{ part.name }} 
   </li>
