--- a/Module 4/src/templates/categorylist.component.template.html
+++ b/Module 4/src/templates/categorylist.component.template.html
@@ -1,6 +1,6 @@
 <ul>
   <li ng-repeat="part in $ctrl.catarray"
-      ui-sref="Items({listdata: part.short_name})">
+      ui-sref="Items({shortName: part.short_name})">
       {{ part.name }} 
   </li>
 </ul>
