--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="item in $itemsctrl.data.menu_items">
+  <li ng-repeat="item in $ctrl.items">
     {{ item[$index].name }}
     {{ item[$index].description }}
   </li>
