--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,7 +1,7 @@
 {{ $ctrl.items }}
 <ul>
   <li ng-repeat="item in $ctrl.items">
-    {{ item[$index].name }}
-    {{ item[$index].description }}
+    {{ item.name }}
+    {{ item.description }}
   </li>
 </ul>
