--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,6 +1,5 @@
 <ul>
   <li ng-repeat="item in $ctrl.items">
-    {{ item.name }}
-    {{ item.description }}
+    {{ item.name }} &nbsp; {{ item.description }}
   </li>
 </ul>
