--- a/Module 4/src/templates/categorieslist.template.html
+++ b/Module 4/src/templates/categorieslist.template.html
@@ -1,4 +1,5 @@
 <a ui-sref="home"> Home </a>
 
 <h3>List of Menu Categories</h3>
+To see specific menu items, click a category!
 <category-list catarray="CLctrl.items"></category-list>
