--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,5 +1,5 @@
-<ul>
-  <li ng-repeat="item in $ctrl.items">
-    {{ item.name }} &nbsp; {{ item.description }}
+<ul class="container">
+  <li ng-repeat="item in $ctrl.items"  class="row" >
+    <span class="col"> {{ item.name }} </span> <span class="col"> {{ item.description }} </span>
   </li>
 </ul>
