--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,7 +1,7 @@
 
  <div class="container">
    <div class="row" ng-repeat="item in $ctrl.items">
-    <div class="col-2"> {{ item.name }} </div> <div class="col-10"> {{ item.description }} </div>
+    <div class="col"> {{ item.name }} </div> <div class="col"> {{ item.description }} </div>
    </div>
  </div>
 
