--- a/Module 4/src/templates/itemslist.component.template.html
+++ b/Module 4/src/templates/itemslist.component.template.html
@@ -1,9 +1,19 @@
+ <ul>
+   <li ng-repeat="item in $ctrl.items">
+    <b> {{ item.name }} </b>  <br> {{ item.description }} 
+   </li>
+ </ul>
 
- <div class="container">
-   <div class="row" ng-repeat="item in $ctrl.items">
-    <div class="col"> {{ item.name }} </div> <div class="col"> {{ item.description }} </div>
-   </div>
- </div>
+
+
+
+
+
+//<div class="container">
+ //  <div class="row" ng-repeat="item in $ctrl.items">
+ //   <div class="col"> {{ item.name }} </div> <div class="col"> {{ item.description }} </div>
+ //  </div>
+// </div>
 
 
 
