working on the form

--- a/Module5/css/public.css
+++ b/Module5/css/public.css
@@ -187,8 +187,14 @@ h3.menu-item-title {
 
 /***************** Form Validation Styling  ******************/
 
+
+.form{
+  color: black;
+}
+
+
 .ng-touched.ng-valid {
-  border: 2px green solid;
+  border: 5px green solid;
 }
 
 
