working on the formatting of the form.  Also, fixed a typo on ng-click attribute of the submit button

--- a/Module5/css/public.css
+++ b/Module5/css/public.css
@@ -192,6 +192,11 @@ h3.menu-item-title {
   color: black;
 }
 
+.inputbox {
+  margin: 5px;
+
+
+}
 
 .ng-touched.ng-valid {
   border: 5px green solid;
