working on the form

--- a/Module5/css/public.css
+++ b/Module5/css/public.css
@@ -194,7 +194,8 @@ h3.menu-item-title {
 
 .inputbox {
   margin: 5px;
-  background-color: #179052;
+  background-color: white;
+  color: black;
 
 
 }
